samples/_failures_safe/1761263876_a1379a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc66e8f5.c: In function ‘main’:
./samples/SAFE/__tmp_fc66e8f5.c:145:5: error: expected expression at end of input
  145 |     int operation =
      |     ^~~
./samples/SAFE/__tmp_fc66e8f5.c:145:5: error: expected declaration or statement at end of input
